--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <form id="form">
-      <input type="text" id="input" />
+      <input type="text" id="input" placeholder="Github 프로필을 검색해보세요" />
     </form>
     <main id="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- 주석 -->
